--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,14 +3,226 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.development.clin.clinapp.HomeActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <!--
+    sothree:umanoParalaxOffset="100dp"
+    -->
+    <com.sothree.slidinguppanel.SlidingUpPanelLayout
+        xmlns:sothree="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/sliding_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        sothree:umanoDragView="@+id/dragView"
+        sothree:umanoOverlay="true"
+        sothree:umanoPanelHeight="68dp"
+        sothree:umanoShadowHeight="2dp">
+
+        <!-- MAIN CONTENT -->
+        <ListView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+        </ListView>
+
+        <!--TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center|top"
+            android:text="The Awesome Sliding Up Panel"
+            android:textSize="16sp" /-->
+
+        <!-- SLIDING LAYOUT -->
+        <LinearLayout
+            android:id="@+id/dragView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#ffffff"
+            android:clickable="true"
+            android:focusable="false"
+            android:orientation="vertical"
+            android:visibility="visible">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:visibility="visible">
+
+                <RelativeLayout
+                    android:id="@+id/relativeLayout7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="visible"
+                    android:layout_alignParentBottom="true"
+                    android:background="#000000"
+                    android:layout_marginBottom="15dp"
+                    android:padding="1dp" >
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:background="#ffffff"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true" >
+
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:src="@mipmap/ic_launcher"
+                            android:id="@+id/imageView20"
+                            android:layout_centerVertical="true"
+                            android:layout_toRightOf="@+id/seekBar2"
+                            android:layout_toEndOf="@+id/seekBar2"
+                            android:visibility="visible" />
+
+                        <SeekBar
+                            android:layout_width="200dp"
+                            android:layout_height="fill_parent"
+                            android:id="@+id/seekBar2"
+                            android:max="1"
+                            android:progressTint="#01fbf9f9"
+                            android:layout_alignParentTop="false"
+                            android:layout_alignParentLeft="false"
+                            android:layout_alignParentStart="false"
+                            android:foregroundGravity="center_vertical|center_horizontal"
+                            android:layout_centerHorizontal="true"
+                            android:progress="0"
+                            android:visibility="visible" />
+
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:src="@mipmap/ic_launcher"
+                            android:id="@+id/imageView21"
+                            android:layout_alignTop="@+id/imageView20"
+                            android:layout_toLeftOf="@+id/seekBar2"
+                            android:layout_toStartOf="@+id/seekBar2"
+                            android:visibility="visible" />
+
+                    </RelativeLayout>
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="visible">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Confirma Tipo de Domicilio"
+                    android:textColor="#000000"
+                    android:textStyle="bold"
+                    android:id="@+id/header_dom"
+                    android:layout_marginLeft="20dp" />
+
+                <LinearLayout
+
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#FFFFFF">
+
+                    <RadioGroup
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="#FFFFFF"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:layout_marginLeft="30dp"
+                        android:id="@+id/radiogroub_home">
+                        <RadioButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Casa"
+                            android:background="#FFFFFF"
+                            android:id="@+id/dom_cas"
+                            android:buttonTint="#8cc17d" />
+                        <RadioButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Departamento"
+                            android:background="#FFFFFF"
+                            android:id="@+id/dom_dep"
+                            android:buttonTint="#8cc17d" />
+                    </RadioGroup>
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="visible">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Elige los Servicios Extras:"
+                    android:textColor="#000000"
+                    android:textStyle="bold"
+                    android:id="@+id/header_services"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp" />
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Jardín (Sólo limpieza)"
+                    android:background="#FFFFFF"
+                    android:id="@+id/serv1"
+                    android:buttonTint="#8cc17d"
+                    android:layout_marginLeft="30dp" />
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Refrigerador"
+                    android:background="#FFFFFF"
+                    android:id="@+id/serv2"
+                    android:buttonTint="#8cc17d"
+                    android:layout_marginLeft="30dp" />
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Armario/Closet"
+                    android:background="#FFFFFF"
+                    android:id="@+id/serv3"
+                    android:buttonTint="#8cc17d"
+                    android:layout_marginLeft="30dp" />
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Planchar"
+                    android:background="#FFFFFF"
+                    android:id="@+id/serv5"
+                    android:buttonTint="#8cc17d"
+                    android:layout_marginLeft="30dp" />
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Planchado de Ropa (1 docena)"
+                    android:background="#FFFFFF"
+                    android:id="@+id/serv4"
+                    android:buttonTint="#8cc17d"
+                    android:layout_marginLeft="30dp" />
+            </LinearLayout>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:text="Confirmar"
+                android:textColor="#FFFFFF"
+                android:textAlignment="center"
+                android:background="#93c9a4"
+                android:textSize="15pt"
+                android:id="@+id/bt_confirm_purch"
+                android:visibility="visible" />
+
+        </LinearLayout>
+
+    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
+
 </RelativeLayout>
